--- a/DCB-Services.html
+++ b/DCB-Services.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DCB Services</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Canned Tool</title>
 <link rel="icon" href="https://chatgpt.com/backend-api/estuary/content?id=file_000000009ee87243b956ddc40ccc1bcf&ts=489510&p=fs&cid=1&sig=4c3e40ab36a4ee06e05285acc0f4e2d6b882af77ae1449549e1848d8d5396166&v=0">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
 <style>
   :root {
     --bg-primary: #f0f4f9; --bg-secondary: rgba(255, 255, 255, 0.7);
