--- a/DCB-Services.html
+++ b/DCB-Services.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>DCB Service</title>
+<title>DCB Services</title>
 <link rel="icon" href="https://chatgpt.com/backend-api/estuary/content?id=file_000000009ee87243b956ddc40ccc1bcf&ts=489510&p=fs&cid=1&sig=4c3e40ab36a4ee06e05285acc0f4e2d6b882af77ae1449549e1848d8d5396166&v=0">
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
 <style>
