--- a/DCB-Services.html
+++ b/DCB-Services.html
@@ -188,7 +188,7 @@
     </div>
 
     <div class="footer">
-      تم بحمد الله
+      Designed and Developed By : MZ © 2025 — Version 1.0.0
     </div>
 </div>
 
