--- a/DCB-Services.html
+++ b/DCB-Services.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DCB Services</title>
-<link rel="icon" href="https://imgg.io/image/VT3wXL" type="image/png">
+<link rel="icon" href="https://img.freepik.com/premium-vector/creative-bd-logo-design_773552-463.jpg?semt=ais_hybrid&w=740&q=80" type="image/png">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <style>
   :root {
