--- a/DCB-Services.html
+++ b/DCB-Services.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DCB Services</title>
-<link rel="icon" href="https://chatgpt.com/backend-api/estuary/content?id=file_00000000c9f471f48a003ca634f7536f&ts=489656&p=fs&cid=1&sig=2e00a0a982b007cb9a96dac915e35218cef623c174cb6aaa5b41d1831e7a1e5e&v=0">
+<link rel="icon" href="https://img.freepik.com/premium-vector/creative-bd-logo-design_773552-463.jpg?semt=ais_hybrid&w=400&q=90">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <style>
   :root {
